# cot-4210-final-project

./: COT4210_FinalProjectProposal.docx  Final Project Description.docx  Project_Plan_Regex_to_MinDFA.docx  README.md
cpp/: .gitignore  CMakeLists.txt  final_project_cpp_structure.txt  input.txt
cpp/include/: dfa.h  nfa.h
cpp/server/: main.py  requirements.txt
cpp/src/: dfa.cpp  main.cpp  nfa.cpp
cpp/test/: test_all.cpp
cpp/visualize/: visualize_dfa.py  visualize_min_dfa.py  visualize_nfa.py
